--- a/src/css/testing.css
+++ b/src/css/testing.css
@@ -1,27 +1,29 @@
-.block{
-  height: 400px;
-  box-shadow: 2px 2px 10px black;
-  margin: 30px;
-  background: url("../img/unnamed.jpg") 50% 50%/auto 100% no-repeat local, url("../img/naruto.jpg") 50% 50%/auto 100% no-repeat local;
+body{
+  padding: 50px;
+}
+.box span{
+  display: block;
+  text-align: center;
+  margin-top: 90px;
+}
+.box{
+  width: 200px;
+  height: 200px;
+  border: 2px solid black;
+  background-color: azure;
+  transform: rotate(15deg);
+}
+@keyframes move {
+  0%{
+    margin-left: 0;
+  }
+  100%{
+    margin-left: 50px;
+  }
 
 }
-.list{
-  margin: 30px;
-  padding: 10px 0px;
-  font-size: 20px;
-}
-.list>li{
-  background: url("../img/unnamed.jpg") left/auto 15px no-repeat;
-  padding-left: 16px;
-}
-.block2{
-  height: 400px;
-  box-shadow: 2px 2px 10px black;
-  margin: 30px;
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#2985d1+9,1fc6b0+28,21ce86+51,28d662+76,28d662+76,7db9e8+100 */
-background: #2985d1; /* Old browsers */
-background: -moz-linear-gradient(45deg,  #2985d1 9%, #1fc6b0 28%, #21ce86 51%, #28d662 76%, #28d662 76%, #7db9e8 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(45deg,  #2985d1 9%,#1fc6b0 28%,#21ce86 51%,#28d662 76%,#28d662 76%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(45deg,  #2985d1 9%,#1fc6b0 28%,#21ce86 51%,#28d662 76%,#28d662 76%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2985d1', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
+/* .box:hover{
+  animation-name: move;
+  animation-duration: 0.7s;
+  animation-fill-mode: forwards;
+} */
