--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @font-face {
 	font-family: 'FranklinGot';
 	src: url('../fonts/ofont.ru_Franklin Gothic Medium.eot');
@@ -298,9 +299,10 @@ main{
 }
 .tab_Me{
     font-size: 20px;
-    opacity: 0.5;
+    opacity: 0.35;
     display: inline-block;
     width: 180px;
+		font-family: 'Pacifico', cursive;
 }
 .tab img{
     width: 90px;
