--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -257,6 +257,11 @@ main{
 .aboutMe img{
   width: 215px;
   border-radius: 50%;
+	pointer-events: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .flip_body{
@@ -559,7 +564,9 @@ hr{
 .price input:active {
   transform: scale(0.95);
 }
-
+.price p{
+	opacity: 0.5;
+}
 
 /* ------------------------------------- */
 
