--- a/scr/css/medias.css
+++ b/scr/css/medias.css
@@ -8,14 +8,13 @@
 	  color: #d5d5d5;
 	}
 	.title__container h4{
-	  color: #305081;
-		text-shadow: 0 0 5px #d5d5d5;
+	  color: #386bb7;
 		/* #79818d */
 	}
 	.title__container input{
-	  color: #305081;
-	  border: 2px solid #305081;
-	  background-color: rgba(#305081, 0.3);
+	  color: #386bb7;
+	  border: 2px solid #386bb7;
+	  background-color: rgba(#386bb7, 0.3);
 	}
   .tab{display: none;}
   .services{
@@ -34,7 +33,17 @@
   	.reviews{
       padding-left: 0;
   		padding-right: 0;
+			min-height: 80%;
   }
+}
+@media (max-width:650px) {
+  	.comment{
+			height: 120px;
+  }
+	.comment>span{
+		display: inline-block;
+		height: auto;
+}
 }
 @media (max-width:1100px) {
     	.contacts{
