--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -128,6 +128,9 @@ a{
 .logo a:active, .menu li a:active{
   transform: scale(0.98);
 }
+.active_a{
+	transform: scale(1.05);
+}
 nav .dropdown{
   text-align: right;
 }
@@ -283,6 +286,7 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
+	cursor: pointer;
 }
 .flip_front{
   z-index: 2;
@@ -587,8 +591,8 @@ hr{
 	margin-bottom: 70px;
 }
 .statistic h2{
-  padding: 15px;
-  font-size: 20px;
+  padding: 10px;
+  font-size: 24px;
 }
 .statistic span{
   font-size: 16px;
@@ -603,6 +607,7 @@ hr{
 
  .reviews{
    padding: 60px 15% 40px;
+	 min-height: 75%;
    font-size: 16px;
    text-align: center;
    color: #293b4f;
@@ -611,10 +616,12 @@ hr{
    width: 80px;
    margin-top: 50px;
  }
- .reviews p{
+ .comment{
    margin: 40px 0px 30px 0px;
 	 font-family: 'Calibri';
 	 font-weight: bold;
+	 max-width: 90%;
+	 min-height: 50px;
  }
 	.reviews b{
 		color: black;
@@ -639,7 +646,7 @@ hr{
 /* начинать отсюдаааа!!!! */
 
 .contacts p{
-  margin-top: 18px;
+  margin: 18px 2px 14px;
   color: white;
 	font-family: 'Calibri';
 	font-weight: bold;
@@ -757,3 +764,10 @@ footer{
 footer p{
 	margin: 0 !important;
 }
+/* .st_item{
+	opacity: 0;
+}
+.st_item.op1{
+	opacity: 1;
+	transition: opacity 2s;
+} */
